k8s-security-framework/policies/pod-security/KSP-POD-002/tests/boundary-fail-single-condition.yaml
apiVersion: v1
kind: Pod
metadata:
  name: pod-002-boundary-ephemeral-additional-boundary-fail
  namespace: policy-test
spec:
  containers:
  - name: secure
    image: harbor.example.com/demo-api:1.0.0
    securityContext:
      privileged: false
  ephemeralContainers:
  - name: debugger
    image: harbor.example.com/demo-api:1.0.0
    command:
    - sh
    securityContext:
      privileged: true
