k8s-security-framework/policies/pod-security/KSP-POD-002/tests/exception-resources-with-policy-violation.yaml
apiVersion: v1
kind: Pod
metadata:
  name: ksp-pod-002-exception
  namespace: policy-test
spec:
  containers:
  - name: demo-api
    image: harbor.example.com/demo-api:1.0.0
    securityContext:
      privileged: true
---
apiVersion: v1
kind: Pod
metadata:
  name: ksp-pod-002-exception-secondary
  namespace: policy-test
spec:
  containers:
  - name: demo-api
    image: harbor.example.com/demo-api:1.0.0
    securityContext:
      privileged: true
---
apiVersion: v1
kind: Pod
metadata:
  name: ksp-pod-002-exception-tertiary
  namespace: policy-test
spec:
  containers:
  - name: secure
    image: harbor.example.com/demo-api:1.0.0
    securityContext:
      privileged: false
  ephemeralContainers:
  - name: debugger
    image: harbor.example.com/demo-api:1.0.0
    command:
    - sh
    securityContext:
      privileged: true
