k8s-security-framework/policies/pod-security/KSP-POD-002/tests/negative-container-privileged-true.yaml
apiVersion: v1
kind: Pod
metadata:
  name: pod-002-negative-one-container-privileged-true
  namespace: policy-test
spec:
  containers:
    - name: demo-api
      image: nginx:1.27
      securityContext:
        privileged: true
