k8s-security-framework/policies/pod-security/KSP-POD-002/tests/negative-init-container-noncompliant.yaml
apiVersion: v1
kind: Pod
metadata:
  name: pod-002-negative-init-container-noncompliant
  namespace: policy-test
spec:
  containers:
    - name: secure
      image: harbor.example.com/demo-api:1.0.0
      securityContext:
        privileged: false
  initContainers:
    - name: init
      image: harbor.example.com/demo-api:1.0.0
      securityContext:
        privileged: true
