k8s-security-framework/policies/pod-security/KSP-POD-002/tests/negative-noncompliant-container-last.yaml
apiVersion: v1
kind: Pod
metadata:
  name: ksp-pod-002-negative-last
  namespace: policy-test
spec:
  containers:
    - name: secure
      image: harbor.example.com/demo-api:1.0.0
      securityContext:
        privileged: false
    - name: insecure
      image: harbor.example.com/demo-api:1.0.0
      securityContext:
        privileged: true
