k8s-security-framework/policies/pod-security/KSP-POD-002/tests/positive-container-privileged-false.yaml
apiVersion: v1
kind: Pod
metadata:
  name: pod-002-positive-one-container
  namespace: policy-test
spec:
  containers:
    - name: demo-api
      image: nginx:1.27
      securityContext:
        privileged: false
