k8s-security-framework/policies/pod-security/KSP-POD-002/tests/positive-two-containers-compliant.yaml
apiVersion: v1
kind: Pod
metadata:
  name: pod-002-positive-two-compliant
  namespace: policy-test
spec:
  containers:
    - name: secure
      image: harbor.example.com/demo-api:1.0.0
      securityContext:
        privileged: false
    - name: sidecar
      image: harbor.example.com/demo-api:1.0.0
      securityContext:
        privileged: false
